--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <!-- <meta charset="utf-8" /> -->
+  <head>
+    <meta charset="utf-8">
     <title>Vector Tiles</title>
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
-    <script src="./main.js"></script>
-</head>
-<body>
-    <header>Vector Tiles</header>
-    <div id='map'>Maps</div>
-    <script>
-    var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'https://openmaptiles.github.io/osm-bright-gl-style/style-cdn.json',
-        center: [8.5456, 47.3739],
-        zoom: 11
-    });
-    </script>
-</body>
+    <style>
+      html, body, #map {
+        margin: 0;
+        height: 100%;
+        width: 100%;
+        font-family: sans-serif;
+      }
+    </style>
+    
+  </head>
+  <body>
+    <div id="map"></div>
+    <script src="/map.js"></script>
+  </body>
 </html>
